--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="personal">Age: 22</p> <p class="personal">Gender: Male</p>
             <hr>
             <h2 class="contact">Contact</h2>
-            <p class="">Phone: 0939806607/ 0707086623</p>
+            <p class="phoneno">Phone: 0939806607/ 0707086623</p>
             <p class="Email">Email: <a href="mailto: Kirubelwinner@gmail.com">Kirubelwinner@gmail.com</a></p>
             <p class="adderss">Address: AkakiKality Wereda 09</p>
             <hr>
