--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Amharic - Native, English: Advanced, Afan-oromo: Low</p>
         </div>
         <div class="containerright">
-            
+            <p>Education</p>
         </div>
     </div>
     <script src="script.js"></script>
