--- a/index.html
+++ b/index.html
@@ -13,19 +13,37 @@
     <div class="container">
         <div class="containerleft">
             <img src="My_picture.jpg" alt="Portrait picture of Kirubel Eshetu">
-            <h2 style="margin-left: 2vw;">Personal Information</h2>
-            <p class="personal">Age: 22</p> <p class="personal">Gender: Male</p>
+            <h2 class="h2personal">Personal Information</h2>
+            <p class="personal">Age: <strong>22</strong></p> <p class="personal">Gender: <strong>Male</strong></p>
             <hr>
             <h2 class="contact">Contact</h2>
-            <p class="phoneno">Phone: 0939806607/ 0707086623</p>
-            <p class="Email">Email: <a href="mailto: Kirubelwinner@gmail.com">Kirubelwinner@gmail.com</a></p>
-            <p class="adderss">Address: AkakiKality Wereda 09</p>
+            <p>Phone: <a href="tel: +251939806607" class="tellink1">+251939806607</a></p>
+            <a href="tel: +251707086623" class="tellink2">+251707086623</a>
+            <p>Email: <a href="mailto: Kirubelwinner@gmail.com" class="Email">Kirubelwinner@gmail.com</a></p>
+            <p class="adderss">Address: Akaki Kality Wereda 09</p>
             <hr>
             <h2 class="language">Language Skills</h2>
             <p>Amharic - Native, English: Advanced, Afan-oromo: Low</p>
         </div>
         <div class="containerright">
-            <p>Education</p>
+            <div class="innerdiv">
+            <h1 style="font-size: 4vw;">Kirubel Eshetu</h1>
+            <h2 style="font-size: 2.5vw;">Fresh Graduate</h2>
+        </div>
+        <div class="divcontent">
+            <h3>About</h3>
+            <p style="margin-left: 5vw; line-height: 1.6vw; font-size: 1.45vw;">My name is Kirubel Eshetu Tefera. I am a young man who is passionate about technology. I recently
+                graduated with a bachelor’s degree in computer science from Jimma University. I am committed to
+                continuously expanding my knowledge and skills in the field. With a strong work ethic and dedication, I
+                am eager to contribute meaningfully and build a successful career in technology.
+                </p>
+            <h3>Education</h3>
+            <h3>Work Experience</h3>
+            <h3>Certifications</h3>
+            <h3>Extracurricular Activity</h3>
+            <h3>Additional Skills</h3>
+            <h3>References</h3>
+        </div>
         </div>
     </div>
     <script src="script.js"></script>
