--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="containerleft">
             <img src="My_picture.jpg" alt="Portrait picture of Kirubel Eshetu">
             <h2 class="h2personal">Personal Information</h2>
-            <p class="personal">Age: <strong>22</strong></p> <p class="personal">Gender: <strong>Male</strong></p>
+            <p class="personal">Age: <strong>22</strong></p>
+            <p class="personal">Gender: <strong>Male</strong></p>
             <hr>
             <h2 class="contact">Contact</h2>
             <p>Phone: <a href="tel: +251939806607" class="tellink1">+251939806607</a></p>
@@ -27,23 +28,56 @@
         </div>
         <div class="containerright">
             <div class="innerdiv">
-            <h1 style="font-size: 4vw;">Kirubel Eshetu</h1>
-            <h2 style="font-size: 2.5vw;">Fresh Graduate</h2>
-        </div>
-        <div class="divcontent">
-            <h3>About</h3>
-            <p style="margin-left: 5vw; line-height: 1.6vw; font-size: 1.45vw;">My name is Kirubel Eshetu Tefera. I am a young man who is passionate about technology. I recently
-                graduated with a bachelor’s degree in computer science from Jimma University. I am committed to
-                continuously expanding my knowledge and skills in the field. With a strong work ethic and dedication, I
-                am eager to contribute meaningfully and build a successful career in technology.
+                <h1 style="font-size: 4vw;">Kirubel Eshetu</h1>
+                <h2 style="font-size: 2.5vw;">Fresh Graduate</h2>
+            </div>
+            <div class="divcontent">
+                <h3>About</h3>
+                <p style="margin-left: 5vw; line-height: 1.6vw; font-size: 1.45vw;">My name is Kirubel Eshetu Tefera. I
+                    am a young man who is passionate about technology. I recently
+                    graduated with a bachelor’s degree in computer science from Jimma University. I am committed to
+                    continuously expanding my knowledge and skills in the field. With a strong work ethic and
+                    dedication, I
+                    am eager to contribute meaningfully and build a successful career in technology.
                 </p>
-            <h3>Education</h3>
-            <h3>Work Experience</h3>
-            <h3>Certifications</h3>
-            <h3>Extracurricular Activity</h3>
-            <h3>Additional Skills</h3>
-            <h3>References</h3>
-        </div>
+                <h3>Education</h3>
+                <div class="educontainer">
+                    <div class="eduleft">
+                        <p>Bachlelor</p>
+                        <p>Computer Science</p>
+                        <p>Jimma University</p>
+                        <p>GPA: 3.45</p>
+                    </div>
+                    <div class="eduright">
+                        <p>Jul 2024</p>
+                        <p>Graduation Date</p>
+                    </div>
+                </div>
+                <h3>Work Experience</h3>
+                <div class="workcontainer">
+                    <div class="workleft">
+                        <p>Jul 2023 - Sep 2023 <br>
+                            2 month <br>
+                            IT technician and <br>
+                            Network <br>
+                            Administrator <br>
+                            Addis Media Network</p>
+                    </div>
+                    <div class="workright">
+                        <p>I have spent my internship period working in Addis Media <br>
+                            Network as an IT technician and Network Administrator. The <br>
+                            internship was a very good experience to apply the knowledge I <br>
+                            had in university to real world problems. I had a very good <br>
+                            opportunity working in hardware maintenance and <br>
+                            Networking.</p>
+
+                    </div>
+                </div>
+                <h3>Certifications</h3>
+                <h3>Extracurricular Activity</h3>
+                <h3>Additional Skills</h3>
+                <h3>References</h3>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
