--- a/index.html
+++ b/index.html
@@ -64,16 +64,24 @@
                             Addis Media Network</p>
                     </div>
                     <div class="workright">
-                        <p>I have spent my internship period working in Addis Media <br>
-                            Network as an IT technician and Network Administrator. The <br>
-                            internship was a very good experience to apply the knowledge I <br>
-                            had in university to real world problems. I had a very good <br>
-                            opportunity working in hardware maintenance and <br>
+                        <p>I have spent my internship period working in Addis Media<br>
+                            Network as an IT technician and Network Administrator. The<br>
+                            internship was a very good experience to apply the knowledge I<br>
+                            had in university to real world problems. I had a very good<br>
+                            opportunity working in hardware maintenance and<br>
                             Networking.</p>
-
                     </div>
                 </div>
                 <h3>Certifications</h3>
+                <div class="certcontainer">
+                    <div class="certleft">
+                        Dec 2024<br>
+                        Certification was awarded.
+                    </div>
+                    <div class="certright">
+                        <strong>Programming Fundamentals</strong><br>
+                        UDACITY
+                    </div>
                 <h3>Extracurricular Activity</h3>
                 <h3>Additional Skills</h3>
                 <h3>References</h3>
