--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
             </div>
             <div class="divcontent">
                 <h3>About</h3>
-                <p style="margin-left: 5vw; line-height: 1.6vw; font-size: 1.45vw;">My name is Kirubel Eshetu Tefera. I
-                    am a young man who is passionate about technology. I recently
+                <p style="margin-left: 5vw; line-height: 1.6vw; font-size: 1.45vw; text-align: justify;">
+                    My name is Kirubel Eshetu Tefera. I am a young man who is passionate about technology. I recently
                     graduated with a bachelor’s degree in computer science from Jimma University. I am committed to
                     continuously expanding my knowledge and skills in the field. With a strong work ethic and
                     dedication, I
                     am eager to contribute meaningfully and build a successful career in technology.
                 </p>
+            </div>
                 <h3>Education</h3>
                 <div class="educontainer">
                     <div class="eduleft">
@@ -49,9 +50,10 @@
                         <p>GPA: 3.45</p>
                     </div>
                     <div class="eduright">
-                        <p>Jul 2024</p>
-                        <p>Graduation Date</p>
+                        <p>Jul 2024 <br>
+                            Graduation Date</p>
                     </div>
+
                 </div>
                 <h3>Work Experience</h3>
                 <div class="workcontainer">
@@ -64,28 +66,134 @@
                             Addis Media Network</p>
                     </div>
                     <div class="workright">
-                        <p>I have spent my internship period working in Addis Media<br>
-                            Network as an IT technician and Network Administrator. The<br>
-                            internship was a very good experience to apply the knowledge I<br>
-                            had in university to real world problems. I had a very good<br>
-                            opportunity working in hardware maintenance and<br>
+                        <p style="text-align: justify;">I have spent my internship period working in Addis Media
+                            Network as an IT technician and Network Administrator. The
+                            internship was a very good experience to apply the knowledge I
+                            had in university to real world problems. I had a very good
+                            opportunity working in hardware maintenance and
                             Networking.</p>
+
                     </div>
                 </div>
                 <h3>Certifications</h3>
                 <div class="certcontainer">
                     <div class="certleft">
-                        Dec 2024<br>
-                        Certification was awarded.
+                        <p>Dec 2024 <br>
+                            Certification was issued</p>
+                        <p>
+                            Oct 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Aug 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Jul 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            May 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Apr 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Mar 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Mar 2024 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Feb 2022 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Feb 2022 <br>
+                            Certification was issued
+
+                        </p>
+                        <p>
+                            Feb 2022 <br>
+                            Certification was issued
+                        </p>
+                        <p>
+                            Jan 2022 <br>
+                            Certification was issued
+                        </p>
                     </div>
+
                     <div class="certright">
-                        <strong>Programming Fundamentals</strong><br>
-                        UDACITY
+
                     </div>
+                </div>
                 <h3>Extracurricular Activity</h3>
+                <div class="extracontainer">
+                    <div class="extraleft">
+                        <p>
+                            Oct 2023 - Feb 2024 <br>
+                            <strong>Content creator and <br>
+                                Social media <br>
+                                manager</strong> <br>
+                            JIT EvaSUE <br>
+                            Fellowship <br>
+                        </p>
+                        <p>
+                            Oct 2020 - Mar 2021 <br>
+                            <strong>Team Leader</strong> <br>
+                            CMMT space science <br>
+                        </p>
+                    </div>
+
+                </div>
                 <h3>Additional Skills</h3>
+                <div class="additional">
+                    <p>Computer programming, Satisfactory Typing, Document and PowerPoint preparation, Computer
+                        Hardware maintenance, Adobe Photshop, Resource Management, Effective Communication, Customer
+                        Experience Advising, Leadership</p>
+                </div>
                 <h3>References</h3>
-            </div>
+                <div class="refcontainer">
+                    <div class="refleft">
+                        <p>
+                            <strong>Instructor</strong> <br>
+                            Jimma University <br>
+                            Institute of Technology <br>
+                            Ermiyas Tesfaye Abera
+                        </p>
+                        <p>
+                            <strong>Instructor</strong> <br>
+                            Jimma University <br>
+                            Institute of Technology <br>
+                            Yekoye Tigabu Asmare
+                        </p>
+                        <p>
+                            <strong>ICT Department Head</strong> <br>
+                            Addis Media network (AMN) <br>
+                            Daniel Zewdie 
+                        </p>
+                    </div>
+
+                    <div class="refright">
+                        <p>Contact detail:<br>
+                            Email: ermidbu@gmail.com ermiyas.abera@ju.edu.et <br>
+                            Tel: +251954356992</p> 
+                        <p>
+                            Contact detail: <br>
+                            Email: yekoya104@gmail.com yekoye.asmare@ju.edu.et <br>
+                            Tel: +251931863003
+                        </p>
+                        <p>
+                            Contact detail: <br>
+                            Email: Danizew@gmail.com <br>
+                            Tel: 09-12-12-79-88 
+                        </p>
+                    </div>
+                </div>
         </div>
     </div>
     <script src="script.js"></script>
