--- a/index.html
+++ b/index.html
@@ -41,162 +41,232 @@
                     am eager to contribute meaningfully and build a successful career in technology.
                 </p>
             </div>
-                <h3>Education</h3>
-                <div class="educontainer">
-                    <div class="eduleft">
-                        <p>Bachlelor</p>
-                        <p>Computer Science</p>
-                        <p>Jimma University</p>
-                        <p>GPA: 3.45</p>
-                    </div>
-                    <div class="eduright">
-                        <p>Jul 2024 <br>
-                            Graduation Date</p>
-                    </div>
+            <h3>Education</h3>
+            <div class="educontainer">
+                <div class="eduleft">
+                    <p>Bachlelor</p>
+                    <p>Computer Science</p>
+                    <p>Jimma University</p>
+                    <p>GPA: 3.45</p>
+                </div>
+                <div class="eduright">
+                    <p>Jul 2024 <br>
+                        Graduation Date</p>
+                </div>
+
+            </div>
+            <h3>Work Experience</h3>
+            <div class="workcontainer">
+                <div class="workleft">
+                    <p>Jul 2023 - Sep 2023 <br>
+                        2 month <br>
+                        IT technician and <br>
+                        Network <br>
+                        Administrator <br>
+                        Addis Media Network</p>
+                </div>
+                <div class="workright">
+                    <p style="text-align: justify;">I have spent my internship period working in Addis Media
+                        Network as an IT technician and Network Administrator. The
+                        internship was a very good experience to apply the knowledge I
+                        had in university to real world problems. I had a very good
+                        opportunity working in hardware maintenance and
+                        Networking.</p>
 
                 </div>
-                <h3>Work Experience</h3>
-                <div class="workcontainer">
-                    <div class="workleft">
-                        <p>Jul 2023 - Sep 2023 <br>
-                            2 month <br>
-                            IT technician and <br>
-                            Network <br>
-                            Administrator <br>
-                            Addis Media Network</p>
-                    </div>
-                    <div class="workright">
-                        <p style="text-align: justify;">I have spent my internship period working in Addis Media
-                            Network as an IT technician and Network Administrator. The
-                            internship was a very good experience to apply the knowledge I
-                            had in university to real world problems. I had a very good
-                            opportunity working in hardware maintenance and
-                            Networking.</p>
+            </div>
+            <h3>Certifications</h3>
+            <div class="certcontainer">
+                <div class="certleft">
+                    <p>Dec 2024 <br>
+                        Certification was issued</p>
+                    <p>
+                        Oct 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Aug 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Jul 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        May 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Apr 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Mar 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Mar 2024 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Feb 2022 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Feb 2022 <br>
+                        Certification was issued
 
-                    </div>
+                    </p>
+                    <p>
+                        Feb 2022 <br>
+                        Certification was issued
+                    </p>
+                    <p>
+                        Jan 2022 <br>
+                        Certification was issued
+                    </p>
                 </div>
-                <h3>Certifications</h3>
-                <div class="certcontainer">
-                    <div class="certleft">
-                        <p>Dec 2024 <br>
-                            Certification was issued</p>
-                        <p>
-                            Oct 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Aug 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Jul 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            May 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Apr 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Mar 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Mar 2024 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Feb 2022 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Feb 2022 <br>
-                            Certification was issued
 
-                        </p>
-                        <p>
-                            Feb 2022 <br>
-                            Certification was issued
-                        </p>
-                        <p>
-                            Jan 2022 <br>
-                            Certification was issued
-                        </p>
-                    </div>
+                <div class="certright">
+                    <p>
+                        Programming Fundamentals <br>
+                        UDACITY
+                    <p style="margin-top: 3vw;">
+                        iSON INDUCTION PROGRAM <br>
+                        iSON Xperiences
 
-                    <div class="certright">
-
-                    </div>
+                    </p>
+                    <p style="margin-top: 3vw;">
+                        Getting Employed with No Job Experinence <br>
+                        Kefeta
+                    </p>
+                    <p style="margin-top: 3vw;">
+                        Certificate of Participation in JIT Evangelical <br>
+                        Christian Students Fellowship
+                        Evangelical Students and Graduates Union of
+                        Ethiopia (EvaSUE)
+                    </p>
+                    <p style="margin-top: 1vw;">
+                        Certificate of Participation in Kito Fellowship
+                        Team <br>
+                        Team of Prayers Mobilizers
+                    </p>
+                    <p style="margin-top: 3.5vw;">
+                        Certificate of Participation in Art Class <br>
+                        Jimma University Architecture and Urban Planing
+                        Department
+                    </p>
+                    <p style="margin-top: 1.5vw;">
+                        Certificate of Completion in Life and Soft Skill
+                        Training <br>
+                        Integrated Youth Activity-Kefeta
+                    </p>
+                    <p style="margin-top: 3vw;">
+                        Certificate of Completion of Employability skill
+                        and job readiness training <br>
+                        Dereja
+                    </p>
+                    <p style="margin-top: 1.5vw;">
+                        Certificate of Completion of Coding
+                        Fundamentals <br>
+                        Grasshopper
+                    </p>
+                    <p style="margin-top: 3.2vw;">
+                        Certificate of Completion of Coding
+                        Fundamentals II <br>
+                        Grasshopper
+                    </p>
+                    <p style="margin-top: 3.5vw;">
+                        Certificate of Completion of Array Methods <br>
+                        Grasshopper
+                    </p>
+                    <p style="margin-top: 3vw;">
+                        Certificate of Participation in Space Science
+                        Club <br>
+                        Cisterican Monastry Mariam Tsion space science
+                        club
+                    </p>
                 </div>
-                <h3>Extracurricular Activity</h3>
-                <div class="extracontainer">
-                    <div class="extraleft">
-                        <p>
-                            Oct 2023 - Feb 2024 <br>
-                            <strong>Content creator and <br>
-                                Social media <br>
-                                manager</strong> <br>
-                            JIT EvaSUE <br>
-                            Fellowship <br>
-                        </p>
-                        <p>
-                            Oct 2020 - Mar 2021 <br>
-                            <strong>Team Leader</strong> <br>
-                            CMMT space science <br>
-                        </p>
-                    </div>
+            </div>
+            <h3>Extracurricular Activity</h3>
+            <div class="extracontainer">
+                <div class="extraleft">
+                    <p> Oct 2023 - Feb 2024 <br>
+                        <strong>Content creator and <br>
+                            Social media <br>
+                            manager</strong> <br>
+                        JIT EvaSUE <br>
+                        Fellowship <br>
+                    </p>
+                    <p> Oct 2020 - Mar 2021 <br>
+                        <strong>Team Leader</strong> <br>
+                        CMMT space science <br>
+                    </p>
+                </div>
+                <div class="extraright">
+                    <p style="text-align: justify;">
+                        The activity I was performing was a very good opportunity to
+                        serve my fellowship through digital media. I have gained
+                        practical experiences of social media management, audio
+                        recording and editing and graphics design.
+                    </p>
+                    <p style="text-align: justify;">
+                        I have served as a team leader for my high school in the club of
+                        space science. It has given me a very good opportunity to
+                        extend my knowledge on astronomy and get a very good
+                        exposure to elevate my communication and leadership skills.
+                    </p>
+                </div>
 
+            </div>
+            <h3>Additional Skills</h3>
+            <div class="additional">
+                <p>Computer programming, Satisfactory Typing, Document and PowerPoint preparation, Computer
+                    Hardware maintenance, Adobe Photshop, Resource Management, Effective Communication, Customer
+                    Experience Advising, Leadership</p>
+            </div>
+            <h3>References</h3>
+            <div class="refcontainer">
+                <div class="refleft">
+                    <p><strong>Instructor</strong> <br>
+                        Jimma University <br>
+                        Institute of Technology <br>
+                        Ermiyas Tesfaye Abera
+                    </p>
+                    <p><strong>Instructor</strong> <br>
+                        Jimma University <br>
+                        Institute of Technology <br>
+                        Yekoye Tigabu Asmare
+                    </p>
+                    <p><strong>ICT Department Head</strong> <br>
+                        Addis Media network (AMN) <br>
+                        Daniel Zewdie
+                    </p>
                 </div>
-                <h3>Additional Skills</h3>
-                <div class="additional">
-                    <p>Computer programming, Satisfactory Typing, Document and PowerPoint preparation, Computer
-                        Hardware maintenance, Adobe Photshop, Resource Management, Effective Communication, Customer
-                        Experience Advising, Leadership</p>
-                </div>
-                <h3>References</h3>
-                <div class="refcontainer">
-                    <div class="refleft">
-                        <p>
-                            <strong>Instructor</strong> <br>
-                            Jimma University <br>
-                            Institute of Technology <br>
-                            Ermiyas Tesfaye Abera
-                        </p>
-                        <p>
-                            <strong>Instructor</strong> <br>
-                            Jimma University <br>
-                            Institute of Technology <br>
-                            Yekoye Tigabu Asmare
-                        </p>
-                        <p>
-                            <strong>ICT Department Head</strong> <br>
-                            Addis Media network (AMN) <br>
-                            Daniel Zewdie 
-                        </p>
-                    </div>
 
-                    <div class="refright">
-                        <p>Contact detail:<br>
-                            Email: ermidbu@gmail.com ermiyas.abera@ju.edu.et <br>
-                            Tel: +251954356992</p> 
-                        <p>
-                            Contact detail: <br>
-                            Email: yekoya104@gmail.com yekoye.asmare@ju.edu.et <br>
-                            Tel: +251931863003
-                        </p>
-                        <p>
-                            Contact detail: <br>
-                            Email: Danizew@gmail.com <br>
-                            Tel: 09-12-12-79-88 
-                        </p>
-                    </div>
+                <div class="refright">
+                    <p>Contact detail:<br>
+                        Email: ermidbu@gmail.com ermiyas.abera@ju.edu.et <br>
+                        Tel: +251954356992</p>
+                    <p>
+                        Contact detail: <br>
+                        Email: yekoya104@gmail.com yekoye.asmare@ju.edu.et <br>
+                        Tel: +251931863003
+                    </p>
+                    <p>
+                        Contact detail: <br>
+                        Email: Danizew@gmail.com <br>
+                        Tel: 09-12-12-79-88
+                    </p>
                 </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
+<footer>
+    <p class="footer">This CV was created by Kirubel Eshetu</p>
+</footer>
 
 </html>
