--- a/index.html
+++ b/index.html
@@ -266,7 +266,10 @@
 </body>
 
 <footer>
-    <p class="footer">This CV was created by Kirubel Eshetu</p>
+    <p class="footer">This CV was created by Kirubel Eshetu <br>
+        Ways to reach me:
+    </p>
+    <p
 </footer>
 
 </html>
