--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="containerleft">
             <img src="My_picture.jpg" alt="Portrait picture of Kirubel Eshetu">
             <h2 class="h2personal">Personal Information</h2>
-            <p class="personal">Age: <strong>22</strong></p>
+            <p class="personal">Age: <strong>23</strong></p>
             <p class="personal">Gender: <strong>Male</strong></p>
             <hr>
             <h2 class="contact">Contact</h2>
@@ -60,13 +60,15 @@
                 <div class="workleft">
                     <p>Jul 2023 - Sep 2023 <br>
                         2 month <br>
-                        IT technician and <br>
+                        <strong>IT technician and</strong><br>
                         Network <br>
                         Administrator <br>
-                        Addis Media Network</p>
+                        Addis Media Network
+                    </p>
                 </div>
                 <div class="workright">
-                    <p style="text-align: justify;">I have spent my internship period working in Addis Media
+                    <p style="text-align: justify;">I have spent my internship period working
+                        in Addis Media
                         Network as an IT technician and Network Administrator. The
                         internship was a very good experience to apply the knowledge I
                         had in university to real world problems. I had a very good
@@ -79,79 +81,80 @@
             <div class="certcontainer">
                 <div class="certleft">
                     <p>Dec 2024 <br>
-                        Certification was issued</p>
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                    </p>
                     <p>
                         Oct 2024 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
                     <p>
                         Aug 2024 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
                     <p>
                         Jul 2024 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p>
+                    <p style="margin-top: 3vw;">
                         May 2024 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
                     <p>
                         Apr 2024 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
+                    </p>
+                    <p style="margin-top: 3.5vw;">
+                        Mar 2024 <br>
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
                     <p>
                         Mar 2024 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p>
-                        Mar 2024 <br>
-                        Certification was issued
-                    </p>
-                    <p>
+                    <p style="margin-top: 3.3vw;">
                         Feb 2022 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p>
+                    <p style="margin-top: 3.2vw;">
                         Feb 2022 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
 
                     </p>
-                    <p>
+                    <p style="margin-top: 3.3vw;">
                         Feb 2022 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
-                    <p>
+                    <p style="margin-top: 3.2vw;">
                         Jan 2022 <br>
-                        Certification was issued
+                        <i style="font-size: 1.3vw;">Certification was issued</i>
                     </p>
                 </div>
 
                 <div class="certright">
-                    <p>
+                    <p style="margin-top: 1vw;">
                         Programming Fundamentals <br>
                         UDACITY
-                    <p style="margin-top: 3vw;">
+                    <p style="margin-top: 1vw;">
                         iSON INDUCTION PROGRAM <br>
                         iSON Xperiences
 
                     </p>
-                    <p style="margin-top: 3vw;">
+                    <p style="margin-top: 1vw;">
                         Getting Employed with No Job Experinence <br>
                         Kefeta
                     </p>
-                    <p style="margin-top: 3vw;">
+                    <p style="margin-top: 1vw;">
                         Certificate of Participation in JIT Evangelical <br>
                         Christian Students Fellowship
                         Evangelical Students and Graduates Union of
                         Ethiopia (EvaSUE)
                     </p>
-                    <p style="margin-top: 1vw;">
+                    <p style="margin-top: 0vw;">
                         Certificate of Participation in Kito Fellowship
                         Team <br>
                         Team of Prayers Mobilizers
                     </p>
-                    <p style="margin-top: 3.5vw;">
+                    <p style="margin-top: 1vw;">
                         Certificate of Participation in Art Class <br>
                         Jimma University Architecture and Urban Planing
                         Department
@@ -161,7 +164,7 @@
                         Training <br>
                         Integrated Youth Activity-Kefeta
                     </p>
-                    <p style="margin-top: 3vw;">
+                    <p style="margin-top: 1vw;">
                         Certificate of Completion of Employability skill
                         and job readiness training <br>
                         Dereja
@@ -191,10 +194,10 @@
             <h3>Extracurricular Activity</h3>
             <div class="extracontainer">
                 <div class="extraleft">
-                    <p> Oct 2023 - Feb 2024 <br>
-                        <strong>Content creator and <br>
-                            Social media <br>
-                            manager</strong> <br>
+                    <p> Oct 2023 - Feb 2024
+                        <strong>Content creator and
+                            Social media
+                            manager</strong>
                         JIT EvaSUE <br>
                         Fellowship <br>
                     </p>
@@ -204,13 +207,13 @@
                     </p>
                 </div>
                 <div class="extraright">
-                    <p style="text-align: justify;">
+                    <p style="text-align: justify; margin-top: 1.2vw;">
                         The activity I was performing was a very good opportunity to
                         serve my fellowship through digital media. I have gained
                         practical experiences of social media management, audio
                         recording and editing and graphics design.
                     </p>
-                    <p style="text-align: justify;">
+                    <p style="text-align: justify; margin-top: 3.0vw;">
                         I have served as a team leader for my high school in the club of
                         space science. It has given me a very good opportunity to
                         extend my knowledge on astronomy and get a very good
@@ -245,18 +248,20 @@
                 </div>
 
                 <div class="refright">
-                    <p>Contact detail:<br>
-                        Email: ermidbu@gmail.com ermiyas.abera@ju.edu.et <br>
-                        Tel: +251954356992</p>
+                    <p><i>Contact detail:</i><br>
+                        Email: <a href="mailto: ermidbu@gmail.com" style="text-decoration: none;">ermidbu@gmail.com</a>   
+                        <a href="mailto" style="margin-left: 4.3vw; text-decoration: none;">ermiyas.abera@ju.edu.et</a><br>
+                        Tel: <a href="tel: +251954356992" style="margin-left: 1.3vw; text-decoration: none;">+251954356992</a>
                     <p>
-                        Contact detail: <br>
-                        Email: yekoya104@gmail.com yekoye.asmare@ju.edu.et <br>
-                        Tel: +251931863003
+                        <i>Contact detail:</i><br>
+                        Email: <a href="mailto: yekoya104@gmail.com" style="text-decoration: none;">yekoya104@gmail.com</a> <br>
+                        <a href="mailto: yekoye.asmare@ju.edu.et;" style="margin-left: 4.3vw; text-decoration: none;">yekoye.asmare@ju.edu.et</a> <br>
+                        Tel: <a href="tel:+251931863003" style="margin-left: 1.3vw; text-decoration: none;;">+251931863003</a>
                     </p>
                     <p>
-                        Contact detail: <br>
-                        Email: Danizew@gmail.com <br>
-                        Tel: 09-12-12-79-88
+                        <i>Contact detail:</i><br>
+                        Email: <a href="mailto: Danizew@gmail.com" style="text-decoration: none;">Danizew@gmail.com</a> <br>
+                        Tel: <a href="tel:+251912127988" style="margin-left: 1.3vw; text-decoration: none;">+251912127988</a>
                     </p>
                 </div>
             </div>
@@ -265,11 +270,10 @@
     <script src="script.js"></script>
 </body>
 
-<footer>
+<!-- <footer>
     <p class="footer">This CV was created by Kirubel Eshetu <br>
         Ways to reach me:
     </p>
-    <p
-</footer>
+    <p -->
 
 </html>
